<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">




        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|enterAlways"
            android:layout_height="wrap_content">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_filter_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:paddingHorizontal="@dimen/padding_medium"
                    android:orientation="horizontal"
                    android:elevation="@dimen/default_elevation">

                    <TextView
                        android:id="@+id/tv_selected_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/popular_movies"
                        android:layout_gravity="center_vertical"
                        android:text="@string/text_popular_movies"
                        android:fontFamily="@font/arkhip_font"
                        android:textColor="@android:color/white"/>
                    <Button
                        android:id="@+id/btn_filter"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/arkhip_font"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_sort"
                        android:background="@android:color/transparent"
                        android:textColor="@android:color/white"/>

                </LinearLayout>


            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <!-- Layout to displaying header at the top and for populating movies -->



    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_filter_settings"/>

    <com.github.ybq.android.spinkit.SpinKitView
        android:layout_width="wrap_content"
        android:id="@+id/pbHeaderProgress"
        app:SpinKit_Color="@color/colorPrimary"
        style="@style/SpinKitView.Large.Circle"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"/>


    <!-- Bottom sheet for filtering movie actions -->
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottom_sheet_filter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nestedscrollview_height"
        android:clipToPadding="true"
        android:layout_marginHorizontal="0sp"
        android:background="@android:color/white"
        android:elevation="@dimen/default_elevation"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RadioGroup
                android:id="@+id/radio_filter_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/btn_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_large"
                    android:layout_weight="1"
                    android:background="@drawable/ic_chip"
                    android:button="@null"
                    android:text="@string/text_action_popular"
                    android:layout_marginTop="@dimen/margintop_btn_popular"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_medium" />

                <RadioButton
                    android:id="@+id/btn_top_rated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_large"
                    android:layout_weight="1"
                    android:background="@drawable/ic_chip_unselected"
                    android:button="@null"
                    android:layout_marginTop="15sp"
                    android:text="@string/text_action_top_rated"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_medium" />

                <RadioButton
                    android:id="@+id/btn_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_large"
                    android:layout_weight="1"
                    android:background="@drawable/ic_chip_unselected"
                    android:button="@null"
                    android:layout_marginTop="15sp"
                    android:text="@string/text_fav_movies"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_medium" />
            </RadioGroup>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


    <!-- Layout to show message when there is no internet connection -->
    <RelativeLayout
        android:id="@+id/rl_internet_failure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/nointernetimg" />

        <TextView
            android:id="@+id/txt_no_internet"
            android:layout_below="@+id/iv_no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_no_internet_connection"
            android:fontFamily="@font/arkhip_font"
            android:textSize="@dimen/no_internet"/>

        <Button
            android:id="@+id/btn_retry"
            android:layout_below="@id/txt_no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/layout_margin_top3"
            android:background="@drawable/button_corners"
            android:text="@string/text_action_try_again"
            android:padding="10sp"
            android:fontFamily="@font/arkhip_font"
            android:textColor="@android:color/white"/>


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>